--- a/src/rust/dpll/Cargo.toml
+++ b/src/rust/dpll/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+fxhash = "0.2.1"
 rand = "0.9.0"
 tokio = { version = "1.43.0", features = ["time"] }
