--- a/src/rust/dpll/Cargo.toml
+++ b/src/rust/dpll/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+core_affinity = "0.8.2"
 fxhash = "0.2.1"
 rand = "0.9.0"
 tokio = { version = "1.43.0", features = ["time"] }
